--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>udemy_react</title>
+    <link rel="stylesheet" href="bundle.css">
   </head>
   <body>
     <div class="container">
-      Hello udemy 
+      Hello udemy
     </div>
   </body>
   <script src="bundle.js" charset="utf-8"></script>
